55) kernel: net: tcp: connect() from bound sockets can be faster.<br>
56) kernel: net: ipv4: igmp: allow removing groups from a removed interface.<br>
57) kernel: net: ipmr: fix static mfc/dev leaks on table destruction.<br>
58) kernel: net: ipmr: fix possible race resulting from improper usage of IP_INC_STATS_BH() in preemptible context.<br>
59) kernel: net: ipmr, ip6mr: fix vif/tunnel failure race condition.<br>
60) kernel: net: ipv6: fix tunnel error handling.<br>
61) kernel: net: ipv6: fix the use of pcpu_tstats in ip6_tunnel.<br>
62) kernel: net: packet: allow to transmit +4 byte in TX_RING slot for VLAN case.<br>
63) kernel: net: packet: tpacket_snd(): fix signed/unsigned comparison.<br>
64) kernel: net: packet: only allow extra vlan len on ethernet devices.<br>
65) kernel: net: packet: fix tpacket_snd max frame len.<br>
66) kernel: net: packet: fixed TPACKET V3 to signal poll when block is closed rather than every packet.<br>
67) kernel: net: packet: don't pass empty blocks for PACKET_V3.<br>
<br>
<br>
<b>3.8.x</b><br>
1) kernel: net: qmi_wwan: remove 1199:9070 device id.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~99%).<br>
2) need add subchannel select for 5GHz module.<br>
3) need review, experiments with new roaming code in MT76x2 driver, need add multiif support in iappd daemon and implement to WebUI.<br>
4) in future: make LanWifiIsolate function work per bssid.<br>
5) add download RWFS pak from ISP server and apply customized logic on the fly (in UI need add checkbox and editbox for url).<br>
6) in very far future: need add in firewall support xt_time matches for parental control.<br>
7) in very far future: need add perip shaper script and webui .<br>
8) in very far future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
9) in very far future: port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
<br>
<br>
<br>