@@ -1543,6 +1543,7 @@
 <br>
 <b>3.8.x</b><br>
 1) kernel: net: qmi_wwan: remove 1199:9070 device id.<br>
+2) kernel: net: net: ipv6: restrict hop_limit sysctl setting to range [1; 255].<br>
 <br>
 <br>
 <b>TODO:</b><br>
